--- a/css/blog.css
+++ b/css/blog.css
@@ -446,53 +446,12 @@ span {
   transition: 0.5s linear;
 }
 /* nav-media section */
-/* @media (max-width: 991px) {
-  .nav-cart-img {
-    display: none;
-  }
-  .nav-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-  }
-  .login-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    text-align: center;
-  }
-  .navbar-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 
-  .nav-btn-sec {
-    margin-top: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .nav-btn-sec .login-btn {
-    display: inline-block;
-    padding: 12px 50px;
-    transform: translateX(-7%);
-  }
-  .navbar-collapse {
-    margin-top: 30px;
-  }
-} */
-
-@media (max-width: 991.98px) {
+@media screen and (max-width: 991.98px) {
   .navbar-toggler {
     margin-left: auto !important;
     margin-right: 0 !important;
   }
-
-  /* ✅ Let Bootstrap control display, only change layout */
   .navbar-collapse {
     flex-direction: column !important;
     align-items: center !important;
@@ -500,7 +459,6 @@ span {
     transition: none !important;
   }
 
-  /* ✅ Only force flex when visible */
   .navbar-collapse.collapse.show {
     display: flex !important;
   }
@@ -530,7 +488,7 @@ span {
   }
 }
 
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
   .navbar-nav .nav-item {
     width: 100%;
     transform: translateX(18px);
@@ -589,7 +547,7 @@ span {
 }
 /* footer media section */
 
-@media (max-width: 993px) {
+@media screen and (max-width: 993px) {
   .footer-cntn-box {
     margin-bottom: 30px;
     text-align: center;
@@ -636,7 +594,7 @@ span {
   }
 }
 
-@media (max-width: 746px) {
+@media screen and (max-width: 746px) {
   .footer-sec {
     padding: 40px 0;
   }
@@ -703,7 +661,7 @@ span {
   background-color: #e48f4a;
 }
 
-/* ===== Modal Overlay ===== */
+/* Modal */
 .modal-overlay {
   display: none;
   position: fixed;
@@ -868,8 +826,7 @@ input:focus {
   margin-top: 10px;
 }
 /* log in media */
-@media (max-width: 993px) {
-  /* Center the modal properly */
+@media screen and (max-width: 993px) {
   .modal-overlay {
     justify-content: center;
     align-items: center;
@@ -968,7 +925,7 @@ input:focus {
     margin-left: 8px;
   }
 
-  /* ===== Fix Close Button Visibility ===== */
+  /*close btn */
   .close-btn {
     position: absolute;
     top: 50px;
@@ -995,7 +952,7 @@ input:focus {
     font-size: 14px;
   }
 }
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
   .left img {
     width: 308px;
     max-width: 100%;
@@ -1132,7 +1089,7 @@ input:focus {
     transform: translateY(-400%);
   }
 }
-/* From Uiverse.io by doniaskima */
+/* log in btn*/
 .btn-53,
 .btn-53 *,
 .btn-53 :after,
@@ -1306,6 +1263,4 @@ input:focus {
     text-align: center;
     animation: popupFade 0.3s ease forwards;
   }
-
-
 }
