--- a/css/menu.css
+++ b/css/menu.css
@@ -758,9 +758,8 @@ span {
   }
 
   .ruppes-sec {
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 5px;
   }
 
   .price {
@@ -1121,18 +1120,9 @@ input:focus {
 
 .isotope-btn:hover,
 .isotope-btn:focus {
-  color: #ffffff;
-  background: #fe8718;
-  border: 1px solid white;
-  text-shadow:
-    0 0 5px #ffffff,
-    0 0 10px #ffffff,
-    0 0 20px #ffffff;
-  box-shadow:
-    0 0 5px #eaae54,
-    0 0 20px #e4b350,
-    0 0 50px #df9637,
-    0 0 100px #fdb72b;
+  color: orange;
+  background: black;
+  border: 1px solid orange;
 }
 
 .isotope-btn:active {
@@ -1366,7 +1356,7 @@ input:focus {
   transition: 0.5s linear;
 } */
 /* food cart popup media responsive */
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
   .add-to-cart-popup {
     width: 90%;
     padding: 20px;
