--- a/css/menu.css
+++ b/css/menu.css
@@ -679,11 +679,11 @@ span {
     text-align: center;
   }
 
-  .ruppes-sec {
+  /* .ruppes-sec {
     flex-direction: column;
     align-items: center;
     gap: 8px;
-  }
+  } */
 
   .price {
     font-size: 16px;
