--- a/css/contact.css
+++ b/css/contact.css
@@ -492,7 +492,7 @@ textarea:focus {
 @media screen and (max-width: 576px) {
   .navbar-nav .nav-item {
     width: 100%;
-    transform: translateX(18px);
+    transform: translateY(40px);
   }
 
   .nav-btn-sec .login-btn {
