--- a/css/chef.css
+++ b/css/chef.css
@@ -438,8 +438,7 @@ span {
 @media screen and (max-width: 576px) {
   .navbar-nav .nav-item {
     width: 100%;
-    /* transform: translateX(18px); */
-    transform: translateY(40px);
+    transform: translateX(18px);
   }
 
   .nav-btn-sec .login-btn {
