--- a/css/home.css
+++ b/css/home.css
@@ -977,7 +977,7 @@ ul {
 @media screen and (max-width: 576px) {
   .navbar-nav .nav-item {
     width: 100%;
-    transform: translateY(40px);
+    transform: translateX(18px);
   }
 
   .nav-btn-sec .login-btn {
