--- a/css/menu.css
+++ b/css/menu.css
@@ -1563,7 +1563,8 @@ input:focus {
 
   .nav-item.dropdown .sub-menu {
     position: fixed !important;
-    top: 50%;
+    /* top: 50%; */
+    top: 77%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
