--- a/css/about.css
+++ b/css/about.css
@@ -1605,7 +1605,8 @@ input:focus {
 
   .nav-item.dropdown .sub-menu {
     position: fixed !important;
-    top: 50%;
+    top: 77%;
+    /* top: 50%; */
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
