--- a/css/blog.css
+++ b/css/blog.css
@@ -248,6 +248,7 @@ span {
   border-radius: 10px;
   padding: 10px;
   cursor: pointer;
+  background-color: #0a1118 !important;
 }
 .chef-img {
   max-width: 300px;
@@ -548,6 +549,12 @@ span {
 /* footer media section */
 
 @media screen and (max-width: 993px) {
+  .i-sec li a img {
+    margin-right: 8px;
+  }
+  .pay-icon li a img {
+    margin-right: 8px;
+  }
   .footer-cntn-box {
     margin-bottom: 30px;
     text-align: center;
