--- a/css/chef.css
+++ b/css/chef.css
@@ -250,6 +250,7 @@ span {
   border-radius: 10px;
   padding: 10px;
   cursor: pointer;
+  background-color: #0a1118 !important;
 }
 .chef-img {
   max-width: 250px;
@@ -476,6 +477,12 @@ span {
 /* footer media section */
 
 @media screen and (max-width: 993px) {
+  .i-sec li a img {
+    margin-right: 8px;
+  }
+  .pay-icon li a img {
+    margin-right: 8px;
+  }
   .footer-cntn-box {
     margin-bottom: 30px;
     text-align: center;
