--- a/css/about.css
+++ b/css/about.css
@@ -287,12 +287,27 @@ span {
 .feature-img {
   overflow: hidden;
   border-radius: 12px;
-  box-shadow: 0 6px 18px rgba(18, 24, 40, 0.06);
-  background: #fff;
+  /* box-shadow: 0 6px 18px rgba(18, 24, 40, 0.06);
+  background: #fff; */
   height: 220px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+/* ----- feature masking -------- */
+.feature-img img {
+  -webkit-mask-image: radial-gradient(
+    circle,
+    rgb(4, 4, 4) 70%,
+    transparent 100%
+  );
+  mask-image: radial-gradient(circle, black 70%, transparent 100%);
+}
+.feature-img img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .feature-img img {
