--- a/css/blog.css
+++ b/css/blog.css
@@ -846,7 +846,7 @@ input:focus {
     position: relative;
     overflow: visible;
     margin: 0 auto;
-    top: 0;
+    /* top: 0; */
     transform: none;
   }
 
