--- a/css/chef.css
+++ b/css/chef.css
@@ -775,7 +775,7 @@ input:focus {
     position: relative;
     overflow: visible;
     margin: 0 auto;
-    top: 0;
+    /* top: 0; */
     transform: none;
   }
 
