--- a/css/blog.css
+++ b/css/blog.css
@@ -288,6 +288,15 @@ span {
   font-size: 18px;
   font-weight: bold;
 }
+.chef-card {
+  background-color: #0a1118;
+  border-radius: 10px;
+  padding: 10px;
+}
+.chef-img {
+  width: 100%;
+  border-radius: 10px;
+}
 .read-more {
   font-size: 16px;
   color: var(--secondary-color);
@@ -1295,3 +1304,6 @@ input:focus {
   opacity: 1;
   pointer-events: auto;
 }
+
+
+
