--- a/css/about.css
+++ b/css/about.css
@@ -485,9 +485,12 @@ span {
 }
 
 .freq-img-box img {
-  max-width: 212px;
+  /* max-width: 212px; */
+  width: 100%;
   margin: 10px;
 }
+
+
 .accordion-button {
   font-size: 16px;
   background: #121a1d;
@@ -692,6 +695,7 @@ span {
 
   .navbar-nav .nav-item {
     width: 100%;
+    text-align: center;
   }
 
   .navbar-nav .nav-link {
@@ -711,7 +715,7 @@ span {
     align-items: center !important;
     margin: 0 auto !important;
     padding: 10px 35px !important;
-    transform: translateX(-37px);
+    transform: translateX(-28px);
   }
 }
 
@@ -918,7 +922,17 @@ span {
   }
 }
 /* footer media section */
-
+@media screen and (max-width: 1400px) {
+.pay-icon{
+  transform: translateX(-45px);
+}
+}
+@media screen and (max-width: 1200px) {
+.pay-icon li a img{
+  transform: translateX(9px);
+  margin-left: 5px;
+}
+}
 @media screen and (max-width: 993px) {
   .i-sec li a img {
     margin-right: 8px;
@@ -1064,7 +1078,7 @@ span {
   display: flex;
   flex-direction: column;
   animation: fadeIn 0.3s ease;
- bottom: 20%;
+  bottom: 20%;
 }
 .close-btn {
   /* position: absolute; */
@@ -1644,10 +1658,6 @@ input:focus {
   }
 }
 
-
-
-
-
 /* Full page dark overlay */
 .body-overlay {
   position: fixed;
@@ -1655,9 +1665,9 @@ input:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6); 
-  z-index: 998; 
-  pointer-events: none; 
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 998;
+  pointer-events: none;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
