--- a/css/contact.css
+++ b/css/contact.css
@@ -466,6 +466,7 @@ textarea:focus {
 
   .navbar-nav .nav-item {
     width: 100%;
+    text-align: center;
   }
 
   .navbar-nav .nav-link {
@@ -485,7 +486,7 @@ textarea:focus {
     align-items: center !important;
     margin: 0 auto !important;
     padding: 10px 35px !important;
-    transform: translateX(-37px);
+    transform: translateX(-28px);
   }
 }
 
@@ -516,7 +517,17 @@ textarea:focus {
 }
 
 /* footer media section */
-
+@media screen and (max-width: 1400px) {
+.pay-icon{
+  transform: translateX(-45px);
+}
+}
+@media screen and (max-width: 1200px) {
+.pay-icon li a img{
+  transform: translateX(9px);
+  margin-left: 5px;
+}
+}
 @media screen and (max-width: 993px) {
   .footer-cntn-box {
     margin-bottom: 30px;
@@ -1336,8 +1347,6 @@ input:focus {
   }
 }
 
-
-
 /* Full page dark overlay */
 .body-overlay {
   position: fixed;
@@ -1345,9 +1354,9 @@ input:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6); 
-  z-index: 998; 
-  pointer-events: none; 
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 998;
+  pointer-events: none;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
