--- a/css/menu.css
+++ b/css/menu.css
@@ -381,6 +381,7 @@ span {
 
   .navbar-nav .nav-item {
     width: 100%;
+    text-align: center;
   }
 
   .navbar-nav .nav-link {
@@ -400,7 +401,7 @@ span {
     align-items: center !important;
     margin: 0 auto !important;
     padding: 10px 35px !important;
-    transform: translateX(-37px);
+    transform: translateX(-28px);
   }
 }
 
@@ -433,6 +434,17 @@ span {
   }
 }
 /* footer media section */
+@media screen and (max-width: 1400px) {
+.pay-icon{
+  transform: translateX(-45px);
+}
+}
+@media screen and (max-width: 1200px) {
+.pay-icon li a img{
+  transform: translateX(9px);
+  margin-left: 5px;
+}
+}
 
 @media screen and (max-width: 993px) {
   .i-sec li a img {
@@ -832,7 +844,7 @@ span {
   display: flex;
   flex-direction: column;
   animation: fadeIn 0.3s ease;
- bottom: 20%;
+  bottom: 20%;
 }
 .close-btn {
   /* position: absolute; */
@@ -1588,9 +1600,6 @@ input:focus {
   }
 }
 
-
-
-
 /* Full page dark overlay */
 .body-overlay {
   position: fixed;
@@ -1598,9 +1607,9 @@ input:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6); 
-  z-index: 998; 
-  pointer-events: none; 
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 998;
+  pointer-events: none;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
